--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'harenosora';
-    src: url('/static/fonts/Harenosora.otf') format('opentype');
+    src: url('/fonts/Harenosora.otf') format('opentype');
 }
 
 @mixin pc {
@@ -32,7 +32,7 @@ header {
     color: #fff;
     padding: 32px 0;
     .noren {
-        background-image: url('/static/noren.png');
+        background-image: url('/noren.png');
         background-repeat: repeat-x;
         background-size: auto 100px;
         background-position: center;
