--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,6 +47,7 @@ header {
         display: grid;
         /*grid-template-columns: 1fr auto;*/
         grid-gap: 24px;
+        padding: 0 16px;
         #logo {
             display: block;
             width: 100%;
