--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -149,9 +149,11 @@ main {
         &-item {
             display: grid;
             grid-gap: 16px;
+            grid-template-rows: auto 1fr; 
             .details {
                 display: grid;
                 grid-gap: 8px;
+                grid-template-rows: auto 1fr; 
                 .date {
                     font-size: 0.7rem;
                 }
