--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -215,6 +215,9 @@ main {
                 font-size: 0.9rem;
             }
         }
+        h2, h3, h4, h5, h6 {
+            margin-top: 1.5em;
+        }
     }
 }
 
