--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -218,6 +218,9 @@ main {
         h2, h3, h4, h5, h6 {
             margin-top: 1.5em;
         }
+        .content{
+            font-family: 'Noto Serif JP';
+        }
     }
 }
 
