--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -141,7 +141,6 @@ main {
             }
         }
     }
-    .blog-list,
     .work-list {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
@@ -160,6 +159,58 @@ main {
                 .title {
                     margin: 0;
                     font-size: 1.1rem;
+                }
+            }
+        }
+        
+    }
+    .blog-list{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 24px;
+        &-item {
+            display: grid;
+            grid-gap: 16px;
+            @include pc{
+                height: 100px;
+                grid-template-columns: 144px 1fr; 
+                .details {
+                    display: grid;
+                    grid-gap: 8px;
+                    grid-template-rows: auto auto 1fr; 
+                    .date {
+                        font-size: 0.7rem;
+                    }
+                    .title {
+                        margin: 0;
+                        font-size: 1.1rem;
+                    }
+                    .description {
+                        font-size: 0.8rem;
+                        color: #666;
+                        margin: 0;
+                    }
+                }
+            }
+            @include sp {
+                height: 83px;
+                grid-template-columns: 120px 1fr; 
+                overflow:hidden;
+                .details {
+                    display: grid;
+                    grid-gap: 8px;
+                    height: 100%;
+                    grid-template-rows: auto auto 1fr; 
+                    .date {
+                        font-size: 0.4rem;
+                    }
+                    .title {
+                        font-size: 0.8rem;
+                        margin: 0;
+                    }
+                    .description {
+                        display: none;
+                    }
                 }
             }
         }
