--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -169,9 +169,9 @@ main {
         grid-template-columns: 1fr;
         grid-gap: 24px;
         &-item {
-            display: grid;
-            grid-gap: 16px;
             @include pc{
+                display: grid;
+                grid-gap: 16px;
                 height: 100px;
                 grid-template-columns: 144px 1fr; 
                 .details {
@@ -193,9 +193,17 @@ main {
                 }
             }
             @include sp {
-                height: 83px;
-                grid-template-columns: 120px 1fr; 
-                overflow:hidden;
+                .thumbnail {
+                    width: 120px;
+                    float: left;
+                    margin-right: 16px;
+                    &::before {
+                        content: '';
+                        display: 'block';
+                        width: 100%;
+                        padding-top: 72%;
+                    }
+                }
                 .details {
                     display: grid;
                     grid-gap: 8px;
