--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -173,7 +173,8 @@ main {
                 display: grid;
                 grid-gap: 16px;
                 height: 100px;
-                grid-template-columns: 144px 1fr; 
+                //grid-template-columns: 144px 1fr; 
+                grid-template-columns: 1fr; 
                 .details {
                     display: grid;
                     grid-gap: 8px;
